@@ -28,6 +28,7 @@ module ApplicationHelper
     ((controller.controller_name == "users") && (%w(create new).include?(controller.action_name)))
   end
 
+  # Show existing flash or embed hidden paragraph ready for flash[:notice]
   #----------------------------------------------------------------------------
   def show_flash(options = { :container => nil, :sticky => false })
     [:error, :warning, :info, :notice].each do |type|
@@ -37,7 +38,7 @@ module ApplicationHelper
         return html << content_tag(:script, "crm.flash('#{options[:container] || id}', #{options[:sticky]})", :type => "text/javascript")
       end
     end
-    nil
+    content_tag(:p, h(flash[:notice]), :class => "flash_notice", :id => "flash_notice", :style => "display:none;")
   end
 
   #----------------------------------------------------------------------------
