@@ -1,8 +1,8 @@
 #tabs
   %ul
     - tabs.each do |tab|
-      %li
-        = link_to(tab[:text], tab[:url], :class => tab[:active] ? "active" : "")
+      %li= link_to(tab[:text], tab[:url], :class => tab[:active] ? "active" : "")
+
 = show_flash
 %table{ :width => "100%", :height => "100%", :cellpadding => 0, :cellspacing => 0, :class => :tabbed }
   %tr
