@@ -1,10 +1,25 @@
 .remote
   - remote_form_for(@user, :url => change_password_user_path(@user)) do |f|
-    = link_to_close change_password_user_path(@user)
-    %p Not implemented yet.
+    = link_to_close password_user_path(@user)
+    = f.error_messages
+    .section
+      %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+        %tr
+          %td{ :valign => :top }
+            .label.req.top Current password:
+            = password_field_tag :current_password, nil, :style => "width:240px"
+          %td{ :colspan => 2 }= spacer
+        %tr
+          %td{ :valign => :top }
+            .label.req New password:
+            = f.password_field :password, :style => "width:240px"
+          %td= spacer
+          %td{ :valign => :top }
+            .label.req Confirm new password:
+            = f.password_field :password_confirmation, :style => "width:240px"
     
     .buttonbar
       = f.submit "Change Password"
       or
-      = link_to_cancel change_password_user_path(@user)
+      = link_to_cancel password_user_path(@user)
 %br
