@@ -1,1 +1,14 @@
-logger.p "change_password.js.rjs"
+if @user.errors.empty?
+  page.call "crm.flip_form", :change_password
+  page.call "crm.set_title", :change_password, "My Profile"
+  page[:flash_notice].replace_html "Your password has been changed."
+  page.call "crm.flash", :flash_notice
+else
+  page[:change_password].replace_html :partial => "password"
+  page[:change_password].visual_effect :shake, :duration => 0.25, :distance => 6
+  unless error_message_on(@user, :current_password).blank?
+    page[:current_password].focus
+  else
+    page[:user_password].focus
+  end
+end
