@@ -7,4 +7,5 @@ else
   page.call "crm.hide_form", :upload_avatar
   page.call "crm.flip_form", :change_password
   page.call "crm.set_title", :change_password
+  page[:current_password].focus
 end
