@@ -19,9 +19,9 @@ describe "/users/edit.js.rjs" do
   it "edit profile: should hide [Upload Avatar] and [Change Password] forms and show [Edit Profile]" do
     render "users/edit.js.rjs"
 
-    # response.should have_rjs("edit_profile") do |rjs|
-    #   with_tag("form[class=edit_profile]")
-    # end
+    response.should have_rjs("edit_profile") do |rjs|
+      with_tag("form[class=edit_user]")
+    end
     response.should include_text('crm.hide_form("upload_avatar")')
     response.should include_text('crm.hide_form("change_password")')
     response.should include_text('crm.flip_form("edit_profile")')
